--- a/Ciamajda/Ciamajda/Views/OurAccount/Edit.cshtml
+++ b/Ciamajda/Ciamajda/Views/OurAccount/Edit.cshtml
@@ -2,7 +2,7 @@
 
 <div>
     <h4 style="text-align: center">
-        Dodaj konto
+        Edytuj konto
     </h4>
     <hr />
 </div>
@@ -43,7 +43,7 @@
                 <a asp-action="Index" class="btn btn-default" style="background-color: orangered;">Anuluj</a>
             </div>
         </div>
-        }
+    }
 </div>
 
 @section Scripts {
