sorting incomes and expenses on get

--- a/Ciamajda/Ciamajda/Views/Expense/Index.cshtml
+++ b/Ciamajda/Ciamajda/Views/Expense/Index.cshtml
@@ -26,7 +26,7 @@
                       <td>Konto</td>
                       <td>Kategoria</td>
                       <td>Miejsce</td>
-                      <td>Czas</td>
+                      <td id="czas">Czas</td>
                       <td>Opis</td>
                       <td>Edytuj</td>
                       <td>Usun</td>
@@ -70,6 +70,6 @@
 <script>
     $(document).ready(function () {
         $('.True').css('background-color', 'lightGray');
-        });
+    });
 </script>
     
