--- a/Ciamajda/Ciamajda/Views/Income/Create.cshtml
+++ b/Ciamajda/Ciamajda/Views/Income/Create.cshtml
@@ -3,101 +3,123 @@
 
 @{
     ViewData["Title"] = "Create";
-
-
-
 }
-<h2>Dodaj przychod</h2>
+
+<div>
+    <h4 style="text-align: center">
+        Dodaj przychód
+    </h4>
+    <hr />
+</div>
 <div align="center">
     @using (Html.BeginForm("create", "Income", FormMethod.Post))
     {
-        <table class="table">
-            <tr>
-                <td> @Html.LabelFor(model => model.Income.Title) </td>
-                <td>@Html.TextBoxFor(model => model.Income.Title) </td>
-                <td></td>
-            </tr>
-            <tr>
-                <td> @Html.LabelFor(model => model.Income.Amount) </td>
-                <td>@Html.TextBoxFor(model => model.Income.Amount) </td>
-                <td>@Html.ValidationMessageFor(model => model.Income.Amount, "", new { @style = "color:red" }) </td>
-            </tr>
-            <tr>
-                <td>@Html.LabelFor(model => model.Income.CurrencyCurrency)</td>
-                <td>
+        <div id="edit">
+            <div class="col-sm-12">
+                @Html.HiddenFor(model => model.Income.Id)
+            </div>
+            <div class="col-sm-12" style="padding-bottom: 5px!important;">
+                <div>
+                    @Html.LabelFor(model => model.Income.Title, new { @style = "float: left;" })
+                    @Html.TextBoxFor(model => model.Income.Title, new { @style = " float: right; width: 85%;" })
+                </div>
+            </div>
+
+            <div class="col-sm-12" style="padding-bottom: 5px!important;">
+                @Html.ValidationMessageFor(model => model.Income.Amount, "", new { @style = "color:red" })
+                <div>
+                    @Html.LabelFor(model => model.Income.Amount, new { @style = "float: left;" })
+                    @Html.TextBoxFor(model => model.Income.Amount, new { @style = "float: right; width: 85%;" })
+                </div>
+            </div>
+
+            <div class="col-sm-12" style="padding-bottom: 5px!important;">
+                @Html.ValidationMessageFor(model => model.Income.CurrencyCurrency, "", new { @style = "color:red" })
+                <div>
+                    @Html.LabelFor(model => model.Income.CurrencyCurrency, new { @style = "float: left;" })
                     @Html.DropDownListFor(model => model.Income.CurrencyCurrency, new SelectListItem[]{
                         new SelectListItem() {Text = "PLN", Value="PLN"},
                         new SelectListItem() {Text = "GBP", Value="GBP"},
                         new SelectListItem() {Text = "EUR", Value="EUR"},
-                        new SelectListItem() {Text = "USD", Value="USD"}})
-                </td>
-                <td>@Html.ValidationMessageFor(model => model.Income.CurrencyCurrency, "", new { @style = "color:red" }) </td>
-            </tr>
-            <tr>
-                <td>@Html.LabelFor(model => model.Income.AccountId) </td>
-                <td>
-                    @Html.DropDownListFor(model => model.Income.AccountId,
-                        new SelectList(ViewBag.accountidlist, "Value", "Text"),
-                        "-Wybierz-",
-                        new { })
-                </td>
-                <td>@Html.ValidationMessageFor(model => model.Income.AccountId, "", new { @style = "color:red" }) </td>
-            </tr>
-            <tr>
-                <td>@Html.LabelFor(model => model.Income.CategoryId) </td>
-                <td>@Html.DropDownListFor(model => model.Income.CategoryId, 
-                        new SelectList(ViewBag.categorylist, "Value", "Text"),
-                        "-Wybierz-",
-                        new { }) </td>
-                <td>@Html.ValidationMessageFor(model => model.Income.CategoryId, "", new { @style = "color:red" }) </td>
-            </tr>
-          
-            <tr>
-                <td>@Html.LabelFor(model => model.Income.IsCyclical) </td>
-                <td>@Html.CheckBoxFor(model => model.Income.IsCyclical, false) </td>
-                <td>@Html.ValidationMessageFor(model => model.Income.IsCyclical, "", new { @style = "color:red" }) </td>
-            </tr>
-            <tr>
-                <td>@Html.LabelFor(model => model.Income.DaysCycle) </td>
-                <td>@Html.TextBoxFor(model => model.Income.DaysCycle) </td>
-                <td>@Html.ValidationMessageFor(model => model.Income.DaysCycle, "", new { @style = "color:red" }) </td>
-            </tr>
-            <tr>
-                <td>@Html.LabelFor(model => model.Income.CycleType) </td>
-                <td>
+                        new SelectListItem() {Text = "USD", Value="USD"}}, new { @style = "float: right; width: 85%;" })
+                </div>
+            </div>
+
+            <div class="col-sm-12" style="padding-bottom: 5px!important;">
+                @Html.ValidationMessageFor(model => model.Income.AccountId, "", new { @style = "color:red" })
+                <div>
+                    @Html.LabelFor(model => model.Income.AccountId, new { @style = "float: left;" })
+                    @Html.DropDownListFor(model => model.Income.AccountId, new SelectList(ViewBag.accountidlist, "Value", "Text"),
+                 "-Wybierz-", new { @style = "float: right; width: 85%;" })
+                </div>
+            </div>
+
+            <div class="col-sm-12" style="padding-bottom: 5px!important;">
+                @Html.ValidationMessageFor(model => model.Income.CategoryId, "", new { @style = "color:red" })
+                <div>
+                    @Html.LabelFor(model => model.Income.CategoryId, new { @style = "float: left;" })
+                    @Html.DropDownListFor(model => model.Income.CategoryId,
+                 new SelectList(ViewBag.categorylist, "Value", "Text"),
+                 "-Wybierz-", new { @style = "float: right; width: 85%;" })
+                </div>
+            </div>
+
+            <div class="col-sm-12" style="padding-bottom: 5px!important;">
+                @Html.ValidationMessageFor(model => model.Income.IsCyclical, "", new { @style = "color:red" })
+                <div>
+                    @Html.LabelFor(model => model.Income.IsCyclical, new { @style = "text-align: left; float: left; width: 15% " })
+                    <div style="float: left;">
+                        @Html.CheckBoxFor(model => model.Income.IsCyclical, false)
+                    </div>
+                </div>
+            </div>
+
+            <div class="col-sm-12" style="padding-bottom: 5px!important;">
+                @Html.ValidationMessageFor(model => model.Income.DaysCycle, "", new { @style = "color:red" })
+                <div>
+                    @Html.LabelFor(model => model.Income.DaysCycle, new { @style = "float: left;" })
+                    @Html.TextBoxFor(model => model.Income.DaysCycle, new { @style = "float: right; width: 85%;" })
+                </div>
+            </div>
+
+            <div class="col-sm-12" style="padding-bottom: 5px!important;">
+                @Html.ValidationMessageFor(model => model.Income.CycleType, "", new { @style = "color:red" })
+                <div>
+                    @Html.LabelFor(model => model.Income.CycleType, new { @style = "float: left; text-align: left; width: 15%" })
                     @Html.DropDownListFor(model => model.Income.CycleType, new SelectListItem[]{
-                        new SelectListItem() {Text = "Tygodniowy", Value="1"},
-                        new SelectListItem() {Text = "Miesięczny", Value="2"},
-                        new SelectListItem() {Text = "3-miesięczny", Value="3"},
-                        new SelectListItem() {Text = "Roczny", Value="4"}},
-                        "-Wybierz-",
-                        new {})
-                </td>
-                <td>@Html.ValidationMessageFor(model => model.Income.CycleType, "", new { @style = "color:red" }) </td>
-            </tr> 
-            <tr>
-                <td>@Html.LabelFor(model => model.Income.Time) </td>
-                <td>@Html.TextBoxFor(model => model.Income.Time, new { @id = "example1", @class = "datepicker"})
-<td>@Html.ValidationMessageFor(model => model.Income.Time, "", new { @style = "color:red" }) </td>
-            </tr>
-            <tr>
-                <td> @Html.LabelFor(model => model.Income.Description) </td>
-                <td>@Html.TextAreaFor(model => model.Income.Description) </td>
-                <td></td>
-            </tr>
-            <tr>
-                <td><input type="submit" value="Save" class="btn btn-default" /></td>
-                <td></td>
-                <td></td>
-            </tr>
-        </table>
-        <div asp-validation-summary="ModelOnly" class="text-danger"></div>
+                            new SelectListItem() { Text = "Tygodniowy", Value = "1" },
+                            new SelectListItem() { Text = "Miesięczny", Value = "2" },
+                            new SelectListItem() { Text = "3-miesięczny", Value = "3" },
+                            new SelectListItem() { Text = "Roczny", Value = "4" }},
+                     "-Wybierz-", new { @style = "right: right; width: 85%;" })
+                </div>
+            </div>
+
+            <div class="col-sm-12" style="padding-bottom: 5px!important;">
+                @Html.ValidationMessageFor(model => model.Income.Time, "", new { @style = "color:red" })
+                <div>
+                    @Html.LabelFor(model => model.Income.Time, new { @style = "float: left;" })
+                    @Html.TextBoxFor(model => model.Income.Time, new { @id = "example1", @class = "datepicker" , @style = "float: right; width: 85%;" })
+                </div>
+            </div>
+
+            <div class="col-sm-12" style="padding-bottom: 5px!important;">
+                <div>
+                    @Html.LabelFor(model => model.Income.Description, new { @style = "float: left;" })
+                    @Html.TextAreaFor(model => model.Income.Description, new { @style = "float: right; width: 85%;" })
+                </div>
+            </div>
+
+            <div asp-validation-summary="ModelOnly" class="text-danger"></div>
+
+            <div class="col-sm-12" style="padding-top: 5px!important;">
+                <input type="submit" value="Save" class="btn btn-default" style="background-color: greenyellow;" />
+                <a asp-action="Index" class="btn btn-default" style="background-color: orangered;">Anuluj</a>
+            </div>
+        </div>
     }
 </div>
 
-<div>
-    <a asp-action="Index">Back to List</a>
-</div>
 @section Scripts {
     @{await Html.RenderPartialAsync("_ValidationScriptsPartial");}
 }
