--- a/Ciamajda/Ciamajda/Views/Income/Index.cshtml
+++ b/Ciamajda/Ciamajda/Views/Income/Index.cshtml
@@ -4,17 +4,19 @@
         content: " \25B4\25BE"
     }
 
-    table.sortable tbody tr:nth-child(2n) td {
+    /*    table.sortable tbody tr:nth-child(2n) td {
         background: #fff
     }
 
     table.sortable tbody tr:nth-child(2n+1) td {
         background: #e6faff;
     }
+
+    */
 </style>
 <div>
     <h4 style="text-align: center">
-        Kategorie przychodów
+        Przychody
         <a asp-action="Create" title="Dodaj nowy przychód" style="float: right" class="fa fa-plus"></a>
     </h4>
     <hr />
