--- a/Ciamajda/Ciamajda/Views/Summary/Index.cshtml
+++ b/Ciamajda/Ciamajda/Views/Summary/Index.cshtml
@@ -1,51 +1,54 @@
 <!-- start Service Section -->
+<div>
+    <h4 style="text-align: center">
+        Twoj portfel
+    </h4>
+    <hr />
+</div>
+<div >
+    <div class="row">
+        <div class="title_sec">
+            @if (ViewBag.size < 1)
+            {
+                <h2>Nie masz zadnych kont! Przejdz do zarzadzania kontami, aby zalozyc konto i moc dodawac przychody i wydatki.</h2>
+            }
+            else
+            {
+                <h2>Oto Twoje konta</h2>
+
+            }
+        </div>
+    </div>
 
     <div class="container">
-        <div class="row">
-           
-            <div class="col-lg-8 col-md-8 col-sm-8 col-xs-8">
-                <div class="title_sec">
-
-                    <h1>Twoj portfel</h1>
-                    @if (ViewBag.size < 1)
-                    {
-                    <h2>Nie masz zadnych kont! Przejdz do zarzadzania kontami, aby zalozyc konto i moc dodawac przychody i wydatki.</h2>
-                    }
-                    else
-                    {
-                    <h2>Oto Twoje konta</h2>
-
-                    }
-                </div>
-            </div>
-            
-        </div>
         @{ int iterator = 0;}
-        @foreach(var element in ViewBag.accountlist)
+        @foreach (var element in ViewBag.accountlist)
         {
-                    @if (iterator == 0)      
-                    { <div class="row"></div>}
+            @if (iterator == 0)
+            { <div class="row"></div>}
 
-                           if (iterator % 3 == 0)
-                            {<div class="row"></div>}
+            if (iterator % 3 == 0)
+            {<div class="row"></div>}
 
-                        <div class="col-lg-3 col-md-3 col-sm-6 col-xs-12">
-                            <div class="service">
-                                <i class="fa fa-usd"></i>
-                                <h2>@element.Name</h2>               
-                                <p>Typ:@element.Type</p>
-                                <p>Saldo:@element.Balance</p>
-                                <p>Numer konta<br>@element.Number</p>
-                                <p><a href="@Url.Action("Details", "OurAccount", new { id = @element.Id })">Szczegó³y</a></p>
-                                
-                            </div>
-                        </div>
+            <div class="col-lg-3 col-md-3 col-sm-6 col-xs-12">
+                <a href="@Url.Action("Details", "OurAccount", new { id = @element.Id })">
+                    <div class="service">
+                        <i class="fa fa-usd"></i>
+                        <h2>@element.Name</h2>
+                        <p>Typ:@element.Type</p>
+                        <p>Saldo:@element.Balance</p>
+                        <p>Numer konta<br>@element.Number</p>
+
+                    </div>
+                </a>
+            </div>
 
             iterator++;
         }
-        </div>
-             
-   
+    </div>
+</div>
+
+
 
 <!-- End Service Section -->
 @section Scripts {
