--- a/Ciamajda/Ciamajda/Views/Manage/ChangePassword.cshtml
+++ b/Ciamajda/Ciamajda/Views/Manage/ChangePassword.cshtml
@@ -1,31 +1,33 @@
 ﻿@model ChangePasswordViewModel
 @{
-    ViewData["Title"] = "Change password";
+    ViewData["Title"] = "Zmień hasło";
     ViewData.AddActivePage(ManageNavPages.ChangePassword);
 }
 
 <h4>@ViewData["Title"]</h4>
 @Html.Partial("_StatusMessage", Model.StatusMessage)
 <div class="row">
-    <div class="col-md-6">
+    <div >
         <form method="post">
             <div asp-validation-summary="All" class="text-danger"></div>
             <div class="form-group">
-                <label asp-for="OldPassword"></label>
+                <label asp-for="OldPassword">Stare hasło</label>
                 <input asp-for="OldPassword" class="form-control" />
                 <span asp-validation-for="OldPassword" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="NewPassword"></label>
+                <label asp-for="NewPassword">Nowe hasło</label>
                 <input asp-for="NewPassword" class="form-control" />
                 <span asp-validation-for="NewPassword" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="ConfirmPassword"></label>
+                <label asp-for="ConfirmPassword">Powtórz hasło</label>
                 <input asp-for="ConfirmPassword" class="form-control" />
-                <span asp-validation-for="ConfirmPassword" class="text-danger"></span>
+                <span asp-validation-for="ConfirmPassword" class="text-danger" style="width:90%;"></span>
             </div>
-            <button type="submit" class="btn btn-default">Update password</button>
+            <div style="float:centerl">
+            <button type="submit" class="btn btn-default">Aktualizauj hasło</button>
+            </div>
         </form>
     </div>
 </div>
