--- a/Ciamajda/Ciamajda/Views/Manage/_Layout.cshtml
+++ b/Ciamajda/Ciamajda/Views/Manage/_Layout.cshtml
@@ -2,11 +2,13 @@
     Layout = "/Views/Shared/_Layout.cshtml";
 }
 
-<h2>Manage your account</h2>
-
 <div>
-    <h4>Change your account settings</h4>
+    <h4 style="text-align: center">
+        Zarządzaj swoim profilem
+    </h4>
     <hr />
+</div>
+<div>
     <div class="row">
         <div class="col-md-3">
             @await Html.PartialAsync("_ManageNav")
