zmiany przed Prezentacją

--- a/Ciamajda/Ciamajda/Views/CategoryIncome/Create.cshtml
+++ b/Ciamajda/Ciamajda/Views/CategoryIncome/Create.cshtml
@@ -6,7 +6,12 @@
 
 
 }
-<h2>Dodaj kategorie</h2>
+<div>
+    <h4 style="text-align: center">
+        Dodaj kategorie
+    </h4>
+    <hr />
+</div>
 <div align="center">
     @using (Html.BeginForm("create", "CategoryIncome", FormMethod.Post))
     {
@@ -22,7 +27,8 @@
                 <td></td>
             </tr>
             <tr>
-                <td><input type="submit" value="Save" class="btn btn-default" /></td>
+                <td><input type="submit" value="Save" class="btn btn-default" />
+                    <a asp-action="Index" class="btn btn-default">Powrót</a></td>
                 <td></td>
                 <td></td>
             </tr>
@@ -34,7 +40,7 @@
 </div>
 
 <div>
-    <a asp-action="Index">Back to List</a>
+    
 </div>
 @section Scripts {
     @{await Html.RenderPartialAsync("_ValidationScriptsPartial");}
