--- a/Ciamajda/Ciamajda/Views/Expense/Edit.cshtml
+++ b/Ciamajda/Ciamajda/Views/Expense/Edit.cshtml
@@ -7,7 +7,12 @@
 
 
 }
-<h2>Dodaj wydatek</h2>
+<div>
+    <h4 style="text-align: center">
+        Edytuj wydatek
+    </h4>
+    <hr />
+</div>
 <div align="center">
     @using (Html.BeginForm("Edit", "Expense", FormMethod.Post))
     {
@@ -96,7 +101,8 @@
             <td>@Html.HiddenFor(model=> model.Expense.Id)</td>
         </tr>
                 <tr>
-                    <td><input type="submit" value="Save" class="btn btn-default" /></td>
+                    <td><input type="submit" value="Save" class="btn btn-default" />
+                        <a asp-action="Index" class="btn btn-default" >Powrót</a></td>
                 </tr>
         </table>
                 <div asp-validation-summary="ModelOnly" class="text-danger"></div>
@@ -104,7 +110,7 @@
     </div>
 
     <div>
-        <a asp-action="Index">Back to List</a>
+        
     </div>
     @section Scripts {
         @{await Html.RenderPartialAsync("_ValidationScriptsPartial");}
