--- a/Ciamajda/Ciamajda/Views/Income/Create.cshtml
+++ b/Ciamajda/Ciamajda/Views/Income/Create.cshtml
@@ -7,7 +7,12 @@
 
 
 }
-<h2>Dodaj przychod</h2>
+<div>
+    <h4 style="text-align: center">
+        Dodaj przychod
+    </h4>
+    <hr />
+</div>
 <div align="center">
     @using (Html.BeginForm("create", "Income", FormMethod.Post))
     {
@@ -86,7 +91,8 @@
                 <td></td>
             </tr>
             <tr>
-                <td><input type="submit" value="Save" class="btn btn-default" /></td>
+                <td><input type="submit" value="Save" class="btn btn-default" />
+                    <a asp-action="Index" class="btn btn-default">Anuluj</a></td>
                 <td></td>
                 <td></td>
             </tr>
@@ -95,9 +101,6 @@
     }
 </div>
 
-<div>
-    <a asp-action="Index">Back to List</a>
-</div>
 @section Scripts {
     @{await Html.RenderPartialAsync("_ValidationScriptsPartial");}
 }
