--- a/Ciamajda/Ciamajda/Views/Income/Index.cshtml
+++ b/Ciamajda/Ciamajda/Views/Income/Index.cshtml
@@ -14,8 +14,13 @@
     }
 </style>
 <div>
-    <a asp-action="Create">Dodaj przychod</a>
+    <h4 style="text-align: center">
+        Twoje przychody
+        <a asp-action="Create" title="Dodaj nowe przychód" style="float: right" class="fa fa-plus"></a>
+    </h4>
+    <hr />
 </div>
+
 <div class="table-responsive cart_info">
 
     <table class="table table-condensed sortable">
@@ -28,8 +33,7 @@
                 <td>Kategoria</td>
                 <td>Czas</td>
                 <td>Opis</td>
-                <td>Edytuj</td>
-                <td>Usun</td>
+                <td>Akcje</td>
             </tr>
         </thead>
         <tbody>
@@ -52,8 +56,8 @@
                             <td>@income.Time.ToString("yyyy-MM-dd")</td>
                         }
                         <td class='@(@income.Time>= DateTime.Now) '>@income.Description</td>
-                        <td class='@(@income.Time>= DateTime.Now) '><a href="@Url.Action("Edit", "income", new { id = @income.Id })" class="btn btn-primary btn-lg"><i class="fa fa-pencil-square-o"></i></a></td>
-                        <td class='@(@income.Time>= DateTime.Now) '><a href="@Url.Action("Delete", "income", new { id = @income.Id })" class="btn btn-primary btn-lg"><i class="fa fa-times"></i></a></td>
+                        <td class='@(@income.Time>= DateTime.Now) '><a href="@Url.Action("Edit", "income", new { id = @income.Id })" class="btn btn-primary"><i class="fa fa-pencil-square-o"></i></a>
+                        <a href="@Url.Action("Delete", "income", new { id = @income.Id })" class="btn btn-primary "><i class="fa fa-times"></i></a></td>
 
                     </tr>
 
